<resources>
    <string name="app_name">MySimRacing</string>
    <string name="e_mail_Inicio">E-mail</string>
    <string name="password_inicio">Contraseña</string>
    <string name="btn_acceder">Acceder</string>
    <string name="txt_registrate">REGISTRATE</string>
    <string name="aun_no_tienes_cuenta">¿Aun no tienes cuenta?</string>
    <string name="logo">TODO</string>
    <string name="txt_registro">Registro</string>
    <string name="edt_e_mail">E-mail</string>
    <string name="edt_nombre_registro">Nombre</string>
    <string name="edt_nickname">Nickname</string>
    <string name="edt_contrasena_registro">Contraseña</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="edt_email_registro">E-mail</string>
    <string name="has_olvidado_tu_clave_entra_aqui">¿Has olvidado tu clave? Entra aqui</string>
    <string name="has_olvidado_tu_contrasena">¿Has olvidado tu contraseña?</string>
    <string name="instrucciones_recuperar_cuenta">Introduce tu Email y te enviaremos las instrucciones para recuperar tu cuenta</string>
    <string name="email_example_com">Email@example.com</string>
    <string name="todo">TODO</string>
    <string name="txt_nombre_usuario">Nombre Usuario</string>
    <string name="nickname_usuario">Nickname</string>
    <string name="imagen_usuario">TODO</string>
    <string name="organizador">🏁 Organizador</string>
    <string name="jefe_de_equipo">👨🏼‍🔧 Jefe de Equipo</string>
    <string name="piloto">🏎 ️Piloto</string>
    <string name="elige_uno_de_los_siguientes_roles_podr_s_cambiarlo_mas_adelante">Elige uno de los siguientes roles, podrás cambiarlo mas adelante:</string>
    <string name="perfil_menu">Perfil</string>
    <string name="cerrar_sesion_menu">Cerrar Sesion</string>
    <string name="info_menu">Información</string>
    <string name="individual">Individual</string>
    <string name="equipos">Equipos</string>
    <string name="selecciona_tu_nuevo_rol">Selecciona tu nuevo rol:</string>
    <string name="btn_actualizar_perfil">Actualizar Perfil</string>
    <string name="txt_mi_perfil">Mi Perfil</string>
    <string name="img_perfil">TODO</string>
    <string name="nombre_user">Nombre user</string>
    <string name="nick">Nick</string>
    <string name="borrar_cuenta">Borrar Cuenta</string>
    <string name="nombre_org">Nombre Org.</string>
    <string name="linkGithub">https://github.com/MarcoP1993/MySimRacing</string>
    <string name="contactodev">marcoaperea10@gmail.com</string>
    <string name="nombre_piloto_perfil">Nombre Piloto</string>
    <string name="nickname_piloto_perfil">Nickname</string>
    <string name="enlace_inscripcion">Enlace inscripcion</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="nombre_inscripcion">Nombre</string>
    <string name="nickname_inscripcion">Nickname</string>
    <string name="correo_example_com">correo@example.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>