<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="418dp"
        android:layout_height="787dp"
        android:layout_marginStart="96dp"
        android:background="@drawable/fondodiseno"
        android:rotation="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/aun_no_tienes_cuenta"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/password_inicio"
        app:layout_constraintStart_toStartOf="@+id/password_inicio"
        app:layout_constraintTop_toBottomOf="@+id/boton_acceso"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/correo_inicio"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="24dp"
        android:background="@android:drawable/gallery_thumb"
        android:ems="10"
        android:hint="@string/e_mail_Inicio"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_inicio"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/gallery_thumb"
        android:ems="10"
        android:hint="@string/password_inicio"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/correo_inicio"
        app:layout_constraintStart_toStartOf="@+id/correo_inicio"
        app:layout_constraintTop_toBottomOf="@+id/correo_inicio"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/boton_acceso"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="acceso"
        android:text="@string/btn_acceder"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_inicio"
        app:layout_constraintStart_toStartOf="@+id/password_inicio"
        app:layout_constraintTop_toBottomOf="@+id/password_inicio" />

    <TextView
        android:id="@+id/registrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:onClick="registro"
        android:text="@string/txt_registrate"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/boton_acceso" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="137dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:onClick="RecuperarClave"
        android:text="@string/has_olvidado_tu_clave_entra_aqui"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_inicio"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password_inicio"
        app:layout_constraintTop_toBottomOf="@+id/password_inicio" />

</androidx.constraintlayout.widget.ConstraintLayout>