<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodisenodos"
    tools:context=".MenuOpciones.PerfilUsuarioActivity">

    <EditText
        android:id="@+id/edt_nombrePerfil"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="24dp"
        android:background="@android:drawable/editbox_dropdown_dark_frame"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/edt_nombre_registro"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_perfil" />

    <EditText
        android:id="@+id/edt_NicknamePerfil"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_dropdown_dark_frame"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/edt_nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombrePerfil"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edt_nombrePerfil"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombrePerfil"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radio_group_roles_perfil"
        android:layout_width="348dp"
        android:layout_height="117dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_dropdown_dark_frame"
        app:layout_constraintEnd_toEndOf="@+id/txt_roles_perfil"
        app:layout_constraintStart_toStartOf="@+id/txt_roles_perfil"
        app:layout_constraintTop_toBottomOf="@+id/txt_roles_perfil">

        <RadioButton
            android:id="@+id/Rb_organizador_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:fontFamily="@font/audiowide"
            android:text="@string/organizador"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/Rb_jefe_equipo_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:fontFamily="@font/audiowide"
            android:text="@string/jefe_de_equipo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/Rb_piloto_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:fontFamily="@font/audiowide"
            android:text="@string/piloto"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_roles_perfil"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/selecciona_tu_nuevo_rol"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_NicknamePerfil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_NicknamePerfil"
        app:layout_constraintTop_toBottomOf="@+id/edt_NicknamePerfil" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/txt_mi_perfil"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider10"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <Button
        android:id="@+id/btn_act_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_actualizar_perfil"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/radio_group_roles_perfil"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/radio_group_roles_perfil"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_roles_perfil" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img_perfil"
        android:layout_width="146dp"
        android:layout_height="164dp"
        android:layout_marginTop="16dp"
        android:onClick="elegirfoto"
        app:civ_border_color="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:srcCompat="@drawable/imagen_organizador"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_nombre_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/nombre_user"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_perfil"
        app:layout_constraintStart_toStartOf="@+id/img_perfil"
        app:layout_constraintTop_toBottomOf="@+id/img_perfil" />

    <TextView
        android:id="@+id/txt_nick_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/nick"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_nombre_perfil"
        app:layout_constraintStart_toStartOf="@+id/txt_nombre_perfil"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_perfil" />

    <Button
        android:id="@+id/btn_borrar_perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/ic_btn_add_background"
        android:fontFamily="@font/audiowide"
        android:text="@string/borrar_cuenta"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_act_perfil"
        app:layout_constraintStart_toStartOf="@+id/btn_act_perfil"
        app:layout_constraintTop_toBottomOf="@+id/btn_act_perfil" />

</androidx.constraintlayout.widget.ConstraintLayout>