<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/progress_horizontal"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/txt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/sonsie_one"
        android:text="@string/txt_registro"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="24dp"
        android:background="@android:drawable/gallery_thumb"
        android:ems="10"
        android:hint="@string/edt_nombre_registro"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_Nickname"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/gallery_thumb"
        android:ems="10"
        android:hint="@string/edt_nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="@color/design_default_color_error"
        android:fontFamily="@font/abeezee"
        android:text="@string/btn_registrarse"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_pass_registro"
        app:layout_constraintStart_toStartOf="@+id/edt_pass_registro"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass_registro" />

    <EditText
        android:id="@+id/edt_email_registro"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/gallery_thumb"
        android:ems="10"
        android:hint="@string/edt_email_registro"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_Nickname"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_pass_registro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/gallery_thumb"
        android:ems="10"
        android:hint="@string/edt_contrasena_registro"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_registro"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="472dp"
        android:layout_height="292dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/disenocuatro"
        tools:ignore="ImageContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="59dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_launcher_foreground"
        android:backgroundTint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>