<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/progress_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="508dp"
        android:layout_height="259dp"
        android:layout_marginBottom="532dp"
        android:background="@android:drawable/alert_dark_frame"
        android:backgroundTint="@android:color/holo_red_dark"
        android:rotation="12"
        android:text="@string/fondo_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_nombre_usuario"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_nombre_usuario"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_usuario"
        app:layout_constraintTop_toTopOf="@+id/img_usuario" />

    <TextView
        android:id="@+id/txt_nickname_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nickname_usuario"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_usuario"
        app:layout_constraintEnd_toEndOf="@+id/txt_nombre_usuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_nombre_usuario"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_usuario"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_usuario"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/img_2"
        android:contentDescription="@string/imagen_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>